--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>jenkins-demo</title>
 	</head>
 	<body>
-		<p>This is fist line of body</body>
+		<p>Hello world </body>
 	</body>
 </html>
